EPOS/Borland Delphi/Definition Files/Delphi XE3/Definitions.pas

{*********************************************************************
**                  maxon motor ag, CH-6072 Sachseln
**********************************************************************
**
** File:            Definitions.pas
**
** Description:     Functions definitions for EposCmd.dll library
**
** Date:            13.11.2003
**
** Dev. Platform:   Turbo Pascal Interface Unit for EposCmd.dll
**
** Target:          Windows Operating Systems
**
** Written by:      maxon motor ag, CH-6072 Sachseln
**
** History:         See chapter History in the document EPOS Command Library
**
** Copyright © 2003 - 2021, maxon motor ag.
** All rights reserved.
********************************************************************}
{$D+,S+,L+}

Unit Definitions;

interface

uses Windows, Messages, SysUtils,  Classes, Graphics, Controls, Forms,
  Dialogs, StdCtrls, ComCtrls, ImgList, ToolWin, ExtCtrls, CheckLst, Menus,
  ActiveX, Buttons;

{ --------------------------------------------------------------------------
                    IMPORTED FUNCTIONS PROTOTYPE
  -------------------------------------------------------------------------}

{Initialisation}
    function VCS_OpenDevice(DeviceName: PAnsiChar; ProtocolStackName: PAnsiChar; InterfaceName: PAnsiChar; PortName: PAnsiChar; var pErrorCode: LongWord): Longint; stdcall; external 'EposCmd.dll' name '_VCS_OpenDevice@20';
    function VCS_OpenDeviceDlg(var pErrorCode: LongWord): Longint; stdcall; external 'EposCmd.dll' name '_VCS_OpenDeviceDlg@4';
    function VCS_SetProtocolStackSettings(KeyHandle: Longint; Baudrate: Longword; Timeout: Longword; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetProtocolStackSettings@16';
    function VCS_GetProtocolStackSettings(KeyHandle: Longint; var pBaudrate: Longword; var pTimeout: Longword; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetProtocolStackSettings@16';
    function VCS_FindDeviceCommunicationSettings(var KeyHandle: Longint; pDeviceName: PAnsiChar; pProtocolStackName: PAnsiChar; pInterfaceName: PAnsiChar; pPortName: PAnsiChar; SizeName: Word; var pBaudrate: Longword; var pTimeout: Longword; var pNodeId: Word; DialogMode: LongInt; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_FindDeviceCommunicationSettings@44';
    function VCS_CloseAllDevices(var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_CloseAllDevices@4';
    function VCS_CloseDevice(KeyHandle: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_CloseDevice@8';

  {Gateway}
    function VCS_SetGatewaySettings(KeyHandle: Longint; Baudrate: Longword; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetGatewaySettings@12';
    function VCS_GetGatewaySettings(KeyHandle: Longint; var pBaudrate: Longword; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetGatewaySettings@12';

  {Subdevice}
    function VCS_OpenSubDevice(DeviceHandle: Longint; DeviceName: PAnsiChar; ProtocolStackName: PAnsiChar; var pErrorCode: LongWord): Longint; stdcall; external 'EposCmd.dll' name '_VCS_OpenSubDevice@16';
    function VCS_OpenSubDeviceDlg(DeviceHandle: Longint; var pErrorCode: LongWord): Longint; stdcall; external 'EposCmd.dll' name '_VCS_OpenSubDeviceDlg@8';
    function VCS_FindSubDeviceCommunicationSettings(DeviceHandle: Longint; var KeyHandle: Longint; pDeviceName: PAnsiChar; pProtocolStackName: PAnsiChar; SizeName: Word; var pBaudrate: Longword; var pNodeId: Word; DialogMode: LongInt; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_FindSubDeviceCommunicationSettings@36';
    function VCS_CloseAllSubDevices(DeviceHandle: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_CloseAllSubDevices@8';
    function VCS_CloseSubDevice(KeyHandle: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_CloseSubDevice@8';

  {Info}
    function VCS_GetDriverInfo(pLibraryName: PAnsiChar; MaxStrNameSize: Smallint; pLibraryVersion: PAnsiChar; MaxStrVersionSize: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetDriverInfo@20';
    function VCS_GetVersion(KeyHandle: Longint; NodeID: Word; var pHardwareVersion: Smallint; var pSoftwareVersion: Smallint; var pApplicationNumber: Smallint; var pApplicationVersion: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetVersion@28';
    function VCS_GetErrorInfo(ErrorCodeValue: Longint; pErrorInfo: PAnsiChar; MaxStrSize: Word): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetErrorInfo@12';

  {Advanced functions}
    function VCS_GetDeviceNameSelection(StartOfSelection: LongBool; pDeviceNameSel: PAnsiChar; MaxStrSize: Word; var pEndOfSelection: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetDeviceNameSelection@20';
    function VCS_GetProtocolStackNameSelection(DeviceName: PAnsiChar; StartOfSelection: LongBool; pProtocolStackNameSel: PAnsiChar; MaxStrSize: Word; var pEndOfSelection: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetProtocolStackNameSelection@24';
    function VCS_GetInterfaceNameSelection(DeviceName: PAnsiChar; ProtocolStackName: PAnsiChar; StartOfSelection: LongBool; pInterfaceNameSel: PAnsiChar; MaxStrSize: Word; var pEndOfSelection: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetInterfaceNameSelection@28';
    function VCS_GetPortNameSelection(DeviceName: PAnsiChar; ProtocolStackName: PAnsiChar; InterfaceName: PAnsiChar; StartOfSelection: LongBool; pPortSel: PAnsiChar; MaxStrSize: Word; var pEndOfSelection: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetPortNameSelection@32';
    function VCS_ResetPortNameSelection(DeviceName: PAnsiChar; ProtocolStackName: PAnsiChar; InterfaceName: PAnsiChar; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ResetPortNameSelection@16';
    function VCS_GetBaudrateSelection(DeviceName: PAnsiChar; ProtocolStackName: PAnsiChar; InterfaceName: PAnsiChar; PortName: PAnsiChar; StartOfSelection: LongBool; var pBaudrateSel: Longint; var pEndOfSelection: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetBaudrateSelection@32';
    function VCS_GetKeyHandle(DeviceName: PAnsiChar; ProtocolStackName: PAnsiChar; InterfaceName: PAnsiChar; PortName: PAnsiChar; var pKeyHandle: Longint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetKeyHandle@24';
    function VCS_GetDeviceName(KeyHandle: Longint; pDeviceName: PAnsiChar; MaxStrSize: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetDeviceName@16';
    function VCS_GetProtocolStackName(KeyHandle: Longint; pProtocolStackName: PAnsiChar; MaxStrSize: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetProtocolStackName@16';
    function VCS_GetInterfaceName(KeyHandle: Longint; pInterfaceName: PAnsiChar; MaxStrSize: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetInterfaceName@16';
    function VCS_GetPortName(KeyHandle: Longint; pPortName: PAnsiChar; MaxStrSize: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetPortName@16';

  {General}
    function VCS_ImportParameter(KeyHandle: Longint; NodeID: Word; pParameterFileName: PAnsiChar; ShowDlg: LongBool; ShowMsg: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ImportParameter@24';
    function VCS_ExportParameter(KeyHandle: Longint; NodeID: Word; pParameterFileName: PAnsiChar; pFirmwareFileName: PAnsiChar; pUserID: PAnsiChar; pComment: PAnsiChar; ShowDlg: LongBool; ShowMsg: LongBool; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_ExportParameter@36';
    function VCS_SetObject(KeyHandle: Longint; NodeID: Word; ObjectIndex: Word; ObjectSubIndex: Byte; Data: Pointer; NbOfBytesToWrite: LongWord; var pNbOfBytesWritten: LongWord; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetObject@32';
    function VCS_GetObject(KeyHandle: Longint; NodeID: Word; ObjectIndex: Word; ObjectSubIndex: Byte; pData: Pointer; NbOfBytesToRead: LongWord; var pNbOfBytesRead: LongWord; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetObject@32';
    function VCS_Restore(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_Restore@12';
    function VCS_Store(KeyHandle: Longint; NodeID: Word; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_Store@12';

{Advanced functions}
  {Motor}
    function VCS_SetMotorType(KeyHandle: Longint; NodeID: Word; MotorType: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetMotorType@16';
    function VCS_SetDcMotorParameter(KeyHandle: Longint; NodeID: Word; NominalCurrent: Smallint; MaxOutputCurrent: Smallint; ThermalTimeConstant: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetDcMotorParameter@24';
    function VCS_SetDcMotorParameterEx(KeyHandle: Longint; NodeID: Word; NominalCurrent: LongWord; MaxOutputCurrent: LongWord; ThermalTimeConstant: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetDcMotorParameterEx@24';
    function VCS_SetEcMotorParameter(KeyHandle: Longint; NodeID: Word; NominalCurrent: Smallint; MaxOutputCurrent: Smallint; ThermalTimeConstant: Smallint; NbOfPolePairs: Byte; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetEcMotorParameter@28';
    function VCS_SetEcMotorParameterEx(KeyHandle: Longint; NodeID: Word; NominalCurrent: LongWord; MaxOutputCurrent: LongWord; ThermalTimeConstant: Smallint; NbOfPolePairs: Byte; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_SetEcMotorParameterEx@28';
    function VCS_GetMotorType(KeyHandle: Longint; NodeID: Word; var pMotorType: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetMotorType@16';
    function VCS_GetDcMotorParameter(KeyHandle: Longint; NodeID: Word; var pNominalCurrent: Smallint; var pMaxOutputCurrent: Smallint; var pThermalTimeConstant: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetDcMotorParameter@24';
    function VCS_GetDcMotorParameterEx(KeyHandle: Longint; NodeID: Word; var pNominalCurrent: LongWord; var pMaxOutputCurrent: LongWord; var pThermalTimeConstant: Smallint; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetDcMotorParameterEx@24';
    function VCS_GetEcMotorParameter(KeyHandle: Longint; NodeID: Word; var pNominalCurrent: Smallint; var pMaxOutputCurrent: Smallint; var pThermalTimeConstant: Smallint; var pNbOfPolePairs: Byte; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetEcMotorParameter@28';
    function VCS_GetEcMotorParameterEx(KeyHandle: Longint; NodeID: Word; var pNominalCurrent: LongWord; var pMaxOutputCurrent: LongWord; var pThermalTimeConstant: Smallint; var pNbOfPolePairs: Byte; var pErrorCode: LongWord): LongBool; stdcall; external 'EposCmd.dll' name '_VCS_GetEcMotorParameterEx@28';
